--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -23,6 +23,32 @@
     margin: 14px;
     color: #C4C4C4;
     text-align: left;
+    position: relative;
+}
+
+#product .product-view .data .actions {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #C4C4C4;
+    font-size: 25px;
+    display: flex;
+    margin: 0 -4px;
+}
+
+#product .product-view .data .actions .button {
+    border-radius: 50%;
+    height: 47px;
+    width: 47px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 4px;
+    transition: background-color .2s ease;
+}
+
+#product .product-view .data .actions .button:hover {
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 #product .product-view .title {
